Tue Dec 22 07:27:52 2020  Rob Lauer  <rlauer6@comcast.net>

	[3.0.2-8]:

	[config cache bug]:
	* src/main/perl/lib/Bedrock/Apache/BedrockSessionFiles.pm.in
	(handler)
	- $conf never set if $BEDROCK_CONFIG defined (cached)

Thu Nov  5 07:18:13 2020  Rob Lauer  <rlauer6@comcast.net>

	[3.0.2-7]:
	* bedrock-build: bump
	[shell error handling]:
	* src/main/perl/lib/Bedrock/Apache/Bedrock.pm.in
	- capture $@, use $err instead
	- if bedrock shell, if pebbles get source from file(?)

	[multiline option]:
	* src/main/perl/lib/Bedrock/Text/TagX/TAG/NoBody/Raise.pm.in
	- multiline option to catch multiline error messages in <raise>
	- removed CVS log messages

2018-11-01 Rob Lauer <rlauer6@comcast.net>
	* bedrock-build: bump

	[add bcc to email]:
	* src/main/perl/lib/Bedrock/Template/Email.pm.in
	(email_message): Bcc

2018-10-23 Rob Lauer <rlauer6@comcast.net>
	* bedrock-build: bump

	[validate id]:
	* src/main/perl/lib/BLM/IndexedTableHandler.pm.in

	[LOG_REDIRECT_STDERR_OFF]:
	* src/main/perl/lib/Bedrock/Log.pm.in: LOG_REDIRECT_STDERR_OFF

	[%PHONE uninitialized value]:
	* src/main/perl/lib/Bedrock/Model/Field.pm.in
	(%PHONE): check for existence of key to avoid warning

	[code formatting]:
	* src/main/perl/lib/BLM/Startup/SessionManager.pm.in
	- pod
	- remove log messages
	* src/main/perl/lib/Bedrock/Context.pm.in: typo in comment
	* src/main/perl/lib/Bedrock/Text/TagX/Log.pm.in: code formatting
	* src/main/perl/lib/Bedrock/Text/TagX/Output.pm.in: code formatting

2018-04-25 Rob Lauer <rlauer6@comcast.net>
	* src/main/perl/lib/BLM/IndexedTableHandler.pm.in
	(pod): pod errors
        * bedrock.spec.in
	+ Bedrock::Object
        * src/main/perl/lib/Bedrock/Template.pm.in
	(new): text should be stored as ref
        * src/main/perl/lib/Bedrock/Text/TagX.pm.in
	- isa => reftype()
        * src/main/perl/lib/Bedrock/Text/TagX/Func.pm.in
	(eval): don't call ->can() unless blessed object
        * src/main/perl/lib/Bedrock/Text/TagX/TAG/NoBody/NULL.pm.in