@@ -1,3 +1,7 @@
+autotools/*
+*.tar.gz
+bedrock-shell*.roc
+**/bedrock.log
 autom4te.cache/*
 *~
 \#*\#
