@@ -26,7 +26,7 @@ phases:
       - rpmbuild -tb $(ls -1 *.tar.gz | head -1)
       - mkdir /root/repo
       - find ~/rpmbuild/RPMS/ -name '*.rpm' | sed 's|/root/rpmbuild/RPMS/||' > "/root/repo/$(cat package-name).lst"
-      - test -e target-repo || touch target-repo
+      - test -e target-repo && echo "YRB_EXTRA=\"$TBC_BRANCH|$CODEBUILD_SOURCE_REPO_URL\"" >> target-repo
       - cp target-repo "/root/repo/$(cat package-name).repo"
       - tree /root
       - cat /root/repo/$(cat package-name).lst
