@@ -25,16 +25,6 @@ package Bedrock::Model::Handler;
 
 C<Bedrock::Model::Handler>
 
-Implements an ORM based on C<BLM::IndexedTableHandler> for MySQL
-tables.  Extends C<BLM::IndexedTableHandler> to encapsulate the table
-definition and maintain consistency between the class that I<handles>
-table operations and the database (via migrations).
-
-This class is designed to be the parent class for your table classes.
-
-See C<BLM::IndexedTableHandler> for details regarding the capabilities
-of the ORM.
-
 =head1 SYNOPSIS
 
  package MyApp::Some_Table;
@@ -60,8 +50,6 @@ of the ORM.
 
  1;
 
-...then...
-
  MyApp::Some_Table->_create_model($dbi);
 
  my $some_table = new MyApp::Some_Table($dbi);
@@ -70,13 +58,15 @@ of the ORM.
 
 =head1 DESCRIPTION
 
-=head1 METHODS
+Implements an ORM based on C<BLM::IndexedTableHandler> for MySQL
+tables.  Extends C<BLM::IndexedTableHandler> to encapsulate the table
+definition and maintain consistency between the class that I<handles>
+table operations and the database (via migrations).
 
-=head1 AUTHOR
+This class is designed to be the parent class for your table classes.
 
-=head1 SEE OTHER
-
-C<BLM::IndexedTableHandler>
+See C<BLM::IndexedTableHandler> for details regarding the capabilities
+of the ORM.
 
 =cut
 
@@ -88,6 +78,12 @@ use Data::Dumper;
 
 use Role::Tiny::With;
 with 'Bedrock::Model::Role';
+
+=pod
+
+=head1 METHODS
+
+=cut
 
 sub new {
   my $class = shift;
@@ -134,5 +130,17 @@ sub _get {
     $self->SUPER::_get($f);
   }
 }
+
+=pod
+
+=head1 AUTHOR
+
+Rob Lauer - <rlauer6@comcast.net>
+
+=head1 SEE OTHER
+
+C<BLM::IndexedTableHandler>
+
+=cut
 
 1;
