@@ -1,3 +1,10 @@
+Wed Mar  3 17:25:59 2021  Rob Lauer  <rlauer6@comcast.net>
+
+	[housekeeping]:
+	* .gitignore: + autotools, bedrock.log, etc
+	* buildspec.yml: YRB_EXTRA
+	* src/main/perl/lib/Bedrock/Model/Handler.pm.in: pod
+
 Tue Dec 22 07:27:52 2020  Rob Lauer  <rlauer6@comcast.net>
 
 	[3.0.2-8]:
